Extend output of `pactl list short sinks` with `volume`, `mutestate` and potentially `description`
To allow effective scripting of pulseaudio the current implementation is only focused on setting things, but not getting things.
So my first idea was to add getter functions ( see #660 ). But it would also be really nice to (potentially instead?) add all crucial information in ONE place in a consize format(!).
So I am suggesting to extend the output of pactl list short sinks
with common and important sink-status information:
-
mute-state
: (muted|unmuted) -
volume(s)
: smart volume indication: 1 value if all channels are the same (mostly!), otherwise 1 value for each channel (e.g. 50L 50R 50F 50C ...) -
default-sink
: not sure if this info is already given, but this is an important info as well
Potentially also:
-
description
: human readable name of sink
To avoid breaking existing parsing scripts these could be added to the end.
Edited by Tormen