Added 3 columns (`mute-state`, `volume` and `default sink`) to output of `pactl list short sinks`. Added `default sink` info als to output of `pactl list sinks`.

This is a first implementation of https://gitlab.freedesktop.org/pulseaudio/pulseaudio/issues/678